kubernetes/manifests/38880cab-5e53-4b9c-b2cb-37e0fd70e5a9/app1-38880c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-38880c
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-38880c
  template:
    metadata:
      labels:
        app: app1-38880c
    spec:
      containers:
        - name: app1-38880c
          image: zploy-app-38880cab-5e53-4b9c-b2cb-37e0fd70e5a9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5006
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: app1-38880c
  namespace: default
spec:
  selector:
    app: app1-38880c
  ports:
    - port: 80
      targetPort: 5006
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-38880c
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app1-38880c.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-38880c
                port:
                  number: 80
